--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body,h1,h2,h3,p,ul{
     padding:0;
 }
 body {
-    background-color: rgb(74,80,95) ;
+    background-color: rgb(56, 185, 147) ;
 }
 header {
     position:fixed;
@@ -12,11 +12,10 @@ header {
     width:100%;
     height:15vh;
     display: flex;
-    padding: 10 px 20px;
+    padding: 10px 20px;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 10px 1px rgba(74, 80, 97, 0.7);
-
+    
 
 }
 .logo{
@@ -76,13 +75,21 @@ main {
 }
 /* home section styles*/
 section#home {
+    display:flex;
+    justify-content: center;
+    align-items: center;
      padding: 30px;
      margin: 10px;
 
 }
-section#home p {
-    height: 30px;
-    width: 40px;
+section#home h1 {
+
+}
+section#home img {
+    height: 85%;
+    width: 50%;
+    border:solid;
+    border-style: groove;
 
 }
 /* services section styles*/
@@ -91,22 +98,42 @@ section#services {
     margin: 10px;
 }
 
-section#services p {
-
+section#services img {
+    border:solid;
+    border-style: groove;
+    height:85%;
+    width: 50%;
 }
 /* about section styles*/
 section#about {
-    padding: 30px;
-    margin:20px;
+    display:flex;
+    justify-content:space-around;
+    align-items: center;
+    padding:30px;
+     margin: 10px;
 }
 
-section#about p {
+section#about .image-container {
+    flex:1;
+    padding:20px;
+}
+section#about .image-container img{
+    height: 85%;
+    width:50%;
+    height: auto;
+    border: solid;
+    border-style:groove;
     
 }
+section#about .text-container {
+    flex: 1;
+    padding:20px;
+}
 
-footer { 
-
+section#about .text-container h1 {
 
 }
+
+
 
 
